--- a/src/Components/Hero/Hero.scss
+++ b/src/Components/Hero/Hero.scss
@@ -56,9 +56,10 @@
 
                 .cv {
                     background-color: #fff;
+                    color: #000;
 
                     &:hover {
-                        background-color: #343435;
+                        background-color: #000;
                         color: #fff;
                     }
                 }
