--- a/src/Components/Skills/Skills.scss
+++ b/src/Components/Skills/Skills.scss
@@ -1,7 +1,7 @@
 .skills{
      margin-bottom: 20px;
     .wrapper{
-        margin-top:70px ;
+        padding-top: 40px;
         display: flex;
         align-items: center;
         justify-content: center;
