--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -54,6 +54,7 @@
                 display: flex;
                 align-items: center;
                 justify-content: space-between;
+                padding: 0px 20px;
                 width: 100%;
     
                  .left {
@@ -63,10 +64,10 @@
                  .left-mobile {
                      position: absolute;
                      display: block;
-                     top: 25px;
-                     right: 10px;
+                     top: 20px;
+                     right: 25px;
                      transition: all 0.5s ease-out;
-                     width: 200px;
+                     width: 180px;
                      z-index: 1;
                      background-color: #fff;
                      display: flex;
@@ -84,8 +85,14 @@
                      display: flex;
                      align-items: center;
                      justify-content: center;
+                     padding: 10px;
                      z-index: 4;
                      font-size: 20px;
+
+                     button{
+                        color: black;
+                        padding: 0px;
+                     }
                  }
     
                  .right {
@@ -95,4 +102,13 @@
     
              }
          }
+     @media (max-width: 767px){
+        .wrapper{
+            padding: 0px;
+
+            .left-mobile{
+                right: 10px;
+            }
+        }
+     }
 }
