changed menu btn in mobile version

--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -21,6 +21,7 @@
             .menu{
                 display: none;
                 font-size: 2rem;
+                cursor: pointer;
 
                 button {
                         background-color: #fff;
