--- a/src/Components/Contact/Contact.scss
+++ b/src/Components/Contact/Contact.scss
@@ -102,7 +102,7 @@
                     justify-content: center;
                     gap: 50px;
                     flex-direction: column;
-                    border: 1px solid black;
+                    border: 1px solid #fff;
                     padding: 30px;
                     border-radius: 30px;
 
@@ -118,7 +118,7 @@
 
                         .icons{
                             background-color: #000;
-                            color: #fff;
+                            color: blue;
                             height: 30px;
                             width: 30px;
                             border-radius: 50%;
