--- a/src/Components/Projects/Projects.scss
+++ b/src/Components/Projects/Projects.scss
@@ -43,6 +43,7 @@
                     height: 200px;
                     object-fit: cover;
                     margin-top: 20px;
+                    border-radius: 5px;
                 }
 
                 .btns{
@@ -92,7 +93,7 @@
                     
 
                     span{
-                        border: 1px solid black;
+                        border: 1px solid #b3b1b1;
                         padding: 10px;
                         border-radius: 10px;
                     }
