--- a/src/App.scss
+++ b/src/App.scss
@@ -8,10 +8,12 @@
 
 .app {
   font-family: 'poppins', serif;
+  color:#fff;
+  background-color: #000000;
 
     button {
           appearance: none;
-          background-color: #000000;
+          background-color: #1a1919;
           border: 2px solid #1A1A1A;
           border-radius: 15px;
           box-sizing: border-box;
