--- a/src/Components/About/About.scss
+++ b/src/Components/About/About.scss
@@ -40,18 +40,49 @@
                 justify-content: center;
                 flex-direction: column;
                 gap: 20px;
-                .education{
-                    border: 1px solid black;
-                    border-radius: 30px;
-                    padding: 10px 15px;
-                }
+                margin-top: -50px;
 
+                .wrapper{
+                
+                    display:grid;
+                    grid-template-columns: repeat(2,1fr);
+                    gap: 20px;
+                    
+                }
+                
+                .educationSection{
+                    border: 1px solid #fff;
+                    border-radius: 30px;
+                    padding: 15px;
+                    cursor: pointer;
+                    transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+                    
+                    a{
+                        text-decoration: none;
+                        color: #fff;
+                    }
+
+                    &:disabled {
+                            pointer-events: none;
+                        }
+                    
+                        &:hover {
+                            box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+                            transform: translateY(-2px);
+                        }
+                    
+                        &:active {
+                            box-shadow: none;
+                            transform: translateY(0);
+                        }
+                    }
                 .aboutDesc{
                     display: flex;
                     align-items: center;
                     justify-content: center;
                     flex-direction: column;
                     gap: 10px;
+                    
 
                
                     .buttons{
@@ -59,8 +90,7 @@
                         gap: 20px;
                     }
                 }
-            }
-                              
+        }                   
             
         }
     }
