--- a/src/Components/Hero/Hero.scss
+++ b/src/Components/Hero/Hero.scss
@@ -35,7 +35,7 @@
 
             p {
                 font-weight: 600;
-                color: rgb(71, 70, 70);
+                color: rgb(136, 123, 123);
                 font-size: 16px;
             }
 
@@ -44,7 +44,7 @@
             }
 
             h2 {
-                color: rgb(71, 70, 70);
+                color: rgb(136, 123, 123);
                 font-size: 30px;
             }
 
@@ -78,11 +78,11 @@
                 display: flex;
                 align-items: center;
                 justify-content: center;
-                gap: 10px;
-                margin: 10px 0px;
+                gap: 20px;
+                margin: 20px 0px;
 
                 a {
-                    color: #000;
+                    color: #fff;
 
                     .icon {
                         font-size: 2.5rem;
