--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -70,7 +70,7 @@
                      transition: all 0.5s ease-out;
                      width: 180px;
                      z-index: 1;
-                     background-color: #fff;
+                     background-color: #000;
                      display: flex;
                      align-items: center;
                      justify-content: space-between;
