--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -59,36 +59,51 @@
                 width: 100%;
     
                  .left {
-                     display: none;
+                    opacity: 0;
+                        visibility: hidden;
+                        width: 0;
+                        overflow: hidden;
+                        transition: opacity 0.5s ease, width 0.5s ease;
                  }
     
                  .left-mobile {
                      position: absolute;
                      display: block;
-                     top: 20px;
-                     right: 25px;
+                     height: 100vh;
+                     top: 0px;
+                     right: 0px;
                      transition: all 0.5s ease-out;
                      width: 180px;
                      z-index: 1;
-                     background-color: #000;
+                     background-color: #302c2c;
                      display: flex;
                      align-items: center;
-                     justify-content: space-between;
                      flex-direction: column;
-                     height: 250px;
+                     gap: 40px;
                     font-size: 20px;
                     padding: 20px;
                     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
                     opacity: 0.9;
+                    padding-top: 100px;
+                    visibility: visible;
+                    width: 200px;
+                    transition: opacity 0.5s ease, width 0.5s ease;
+                 }
+
+                .left-mobile.open {
+                    width: 150px;
+                    transition: width 0.5s ease;
+                    
                  }
     
                  .menu {
                      display: flex;
                      align-items: center;
                      justify-content: center;
-                     padding: 10px;
+                     padding: 2px;
                      z-index: 4;
                      font-size: 20px;
+                     
 
                      button{
                         color: black;
@@ -98,7 +113,7 @@
     
                  .right {
                          font-size: 24px !important;
-                         margin-left: 20px;
+                         margin-left: 12px;
                  }
     
              }
@@ -106,9 +121,9 @@
      @media (max-width: 767px){
         .wrapper{
             padding: 0px;
-
-            .left-mobile{
-                right: 10px;
+            
+            .menu{
+                padding: 10px;
             }
         }
      }
