minor fix in nav,about,skill section

--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -59,42 +59,36 @@
                 width: 100%;
     
                  .left {
-                    opacity: 0;
-                        visibility: hidden;
-                        width: 0;
-                        overflow: hidden;
-                        transition: opacity 0.5s ease, width 0.5s ease;
+                    visibility: hidden;
+                    transition: width 0.5s ease-out;
+                    width: 0;
+                    position: absolute;
+                    top: 80px;
                  }
     
                  .left-mobile {
-                     position: absolute;
-                     display: block;
-                     height: 100vh;
-                     top: 0px;
-                     right: 0px;
-                     transition: all 0.5s ease-out;
-                     width: 180px;
-                     z-index: 1;
-                     background-color: #302c2c;
-                     display: flex;
-                     align-items: center;
-                     flex-direction: column;
-                     gap: 40px;
+                    position: absolute;
+                    height: 100vh;
+                    top: 80px;
+                    right: 0px;
+                    z-index: 1;
+                    background-color: #463e3e;
+                    display: flex;
+                    align-items: center;
+                    flex-direction: column;
+                    gap: 40px;
                     font-size: 20px;
-                    padding: 20px;
-                    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
                     opacity: 0.9;
                     padding-top: 100px;
-                    visibility: visible;
-                    width: 200px;
-                    transition: opacity 0.5s ease, width 0.5s ease;
+                    
+
+                    &.open {
+                        width: 100%; 
+                        transition: width 0.5s ease-out
+                    }
                  }
 
-                .left-mobile.open {
-                    width: 150px;
-                    transition: width 0.5s ease;
-                    
-                 }
+                
     
                  .menu {
                      display: flex;
@@ -112,8 +106,8 @@
                  }
     
                  .right {
-                         font-size: 20px !important;
-                         margin-left: 10px;
+                         font-size: 24px !important;
+                         margin-left: 20px;
                  }
     
              }
