--- a/src/Components/About/About.scss
+++ b/src/Components/About/About.scss
@@ -44,14 +44,18 @@
 
                 .wrapper{
                 
-                    display:grid;
-                    grid-template-columns: repeat(2,1fr);
+                    display:flex;
+                    justify-content:center;
                     gap: 20px;
+                    align-items: center;
+                    flex-direction: row;
                     
                 }
                 
                 .educationSection{
                     border: 1px solid #fff;
+                    height: 200px;
+                    width: 230px;
                     border-radius: 30px;
                     padding: 15px;
                     cursor: pointer;
@@ -100,6 +104,13 @@
                   margin-top: 90px;
                 .container{
                      flex-direction: column;
+
+                     .right{
+                        
+                        .wrapper{
+                            flex-direction: column;
+                        }
+                     }
                      
                 }
             }
