--- a/src/App.scss
+++ b/src/App.scss
@@ -9,8 +9,7 @@
 .app {
   font-family: 'poppins', serif;
   color:#fff;
-  background-color: #000000;
-
+  background-color: black;
     button {
           appearance: none;
           background-color: #1a1919;
