minor bug fixed

--- a/src/Components/About/About.scss
+++ b/src/Components/About/About.scss
@@ -71,8 +71,9 @@
                         }
                     
                         &:hover {
-                            box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+                            box-shadow: rgba(68, 64, 64, 0.25) 0 8px 15px;
                             transform: translateY(-2px);
+                            border: 1px solid yellow;
                         }
                     
                         &:active {
