--- a/src/Components/Skills/Skills.scss
+++ b/src/Components/Skills/Skills.scss
@@ -27,8 +27,15 @@
         
         .skill{
             display: flex;
-            justify-content: center;
             gap: 5px;
+            justify-content: start;
+            align-items: start;
+
+            .skillInfo{
+                display: flex;
+                flex-direction: column;
+                align-items: start;
+            }
         }
     }
     .footer{
