--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -72,7 +72,7 @@
                     top: 80px;
                     right: 0px;
                     z-index: 1;
-                    background-color: #463e3e;
+                    background-color: #000;
                     display: flex;
                     align-items: center;
                     flex-direction: column;
